# GraphLite

./: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER_QUICK_START.md  Dockerfile  MANUAL_TEST_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
graphlite/: Cargo.toml
graphlite-sdk/: Cargo.toml  README.md
graphlite-sdk/examples/: basic_usage.rs
graphlite-sdk/src/: connection.rs  lib.rs  query.rs  result.rs  transaction.rs
graphlite/src/: lib.rs
graphlite/src/ast/: ast.rs  lexer.rs  mod.rs  parser.rs  pretty_printer.rs  validator.rs
graphlite/src/cache/: cache_config.rs  cache_manager.rs  invalidation.rs  mod.rs  plan_cache.rs  result_cache.rs  subquery_cache.rs
graphlite/src/catalog/: error.rs  manager.rs  mod.rs  operations.rs  registry.rs  system_procedures.rs  traits.rs
graphlite/src/coordinator/: mod.rs  query_coordinator.rs
graphlite/src/exec/: context.rs  error.rs  executor.rs  lock_tracker.rs  memory_budget.rs  mod.rs  result.rs  row_iterator.rs  streaming_topk.rs  unwind_preprocessor.rs  with_clause_processor.rs
graphlite/src/functions/: aggregate_functions.rs  function_trait.rs  graph_functions.rs  list_functions.rs  mathematical_functions.rs  mod.rs  null_functions.rs  numeric_functions.rs  special_functions.rs  string_functions.rs  temporal_functions.rs  timezone_functions.rs
graphlite/src/plan/: cost.rs  insert_planner.rs  logical.rs  mod.rs  optimizer.rs  physical.rs  trace.rs
graphlite/src/schema/: mod.rs  types.rs  validator.rs
graphlite/src/session/: global_provider.rs  instance_provider.rs  manager.rs  mod.rs  mode.rs  models.rs  provider.rs  transaction_state.rs
graphlite/src/storage/: data_adapter.rs  graph_cache.rs  mod.rs  multi_graph.rs  storage_manager.rs  type_mapping.rs  types.rs  value.rs
graphlite/src/txn/: isolation.rs  log.rs  manager.rs  mod.rs  recovery.rs  state.rs  wal.rs
graphlite/src/types/: casting.rs  coercion.rs  inference.rs  mod.rs  (+1 more)
graphlite/tests/: aggregation_tests.rs  cache_tests.rs  call_where_clause_test.rs  cli_fixture_tests.rs  ddl_independent_tests.rs  ddl_shared_tests.rs  debug_fraud_fixture.rs  delimited_identifiers_tests.rs  dml_tests.rs  dql_tests.rs  duplicate_edge_warning_test.rs  duplicate_insert_test.rs  fixture_tests.rs  function_expression_insert_test.rs  function_tests.rs  identity_based_set_ops_test.rs  insert_node_identifier_regression_test.rs  intersect_debug_test.rs  json_format_tests.rs  list_graphs_bug_test.rs  list_graphs_bug_test_simple.rs  match_set_transactional_test.rs  match_with_tests.rs  order_by_desc_test.rs  pattern_tests.rs  readme_examples_test.rs  role_management_tests.rs  rollback_batch_test.rs  rollback_simple_test.rs  security_role_user_tests.rs  session_mode_tests.rs  set_function_expression_test.rs  set_operations_tests.rs  simple_insert_test.rs  simple_let_test.rs  simple_role_test.rs  simple_union_test.rs  storage_verification_test.rs  stored_procedure_no_prefix_test.rs  transactional_set_test.rs  (+3 more)
sdk-python/: TESTING_INSTRUCTIONS.md  pyproject.toml  test_readme_examples.py
sdk-python/examples/: basic_usage.py
sdk-python/test_db/: db
(+122 files in other folders)
