[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graphlite-sdk"
version = "0.1.0"
description = "Python SDK for the GraphLite embedded graph database"
authors = [{ name = "GraphLite AI" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["graphlite_sdk"]
